@startuml

title Relationships - Class Diagram


class Node<TInput,TOutput>{
    +void SetInput(TInput input);
    +SinkNode<TOutput> CollectAllOutputsToOneArray();
    +INode<TOutput> Process();
    +TOutput[] Process(TInput input)
}

interface INode<out T>{
    +void Process()
    +T[] Output
}

class NodeBase<TInput,TOutput>{
    +TOutput[] Output
    +void Reset()
    +void Process()
    +void SetInput(INode<TInput> node)
    +INode<TOutput> Process()
}

class FuncNode<TInput, TOutput>{
    +FuncNode(Func<TInput, TOutput[]> processFunction)
    +TOutput[] Process(TInput input)
}

class SinkNode<T>{
    +INode<T[]> Process()
}

INode <|-down NodeBase:Inheritance
NodeBase<|-down- SinkNode:Inheritance
NodeBase <|-down- Node: Inheritance
Node <|-down- FuncNode: Inheritance


@enduml